<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/openJobs"
        android:layout_width="410dp"
        android:layout_height="43dp"
        android:text="@string/appTitle"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/divider2"
        android:layout_width="368dp"
        android:layout_height="2dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="52dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/strFilter"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="51dp"
        android:layout_height="41dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:onClick="btnFilterPriceHighToLow"
        android:text="@string/btnFilterPriceHighToLow"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <Button
        android:id="@+id/button"
        android:layout_width="51dp"
        android:layout_height="41dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        android:onClick="btnFilterPriceLowToHigh"
        android:text="@string/btnFilterPriceLowToHigh"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="78dp"
        android:layout_height="41dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="8dp"
        android:onClick="btnFilterOnDateAdded"
        android:text="@string/BtnFilterDateAdded"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="389dp"
        android:layout_height="528dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3"
        app:layout_constraintVertical_bias="0.509">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <view
        android:id="@+id/view4"
        class="android.support.v4.view.ViewPager"
        id="@+id/view"
        android:layout_width="377dp"
        android:layout_height="201dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/scrollView2"
        app:layout_constraintStart_toStartOf="@+id/scrollView2"
        app:layout_constraintTop_toTopOf="@+id/scrollView2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4"
        tools:srcCompat="@tools:sample/avatars[1]" />

    <TextView
        android:id="@+id/job1Title"
        android:layout_width="242dp"
        android:layout_height="28dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/job1Title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/view4" />

    <TextView
        android:id="@+id/job1SubTitle"
        android:layout_width="243dp"
        android:layout_height="21dp"
        android:layout_marginStart="20dp"
        android:text="@string/job1SubTitle"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/job1Title" />

    <TextView
        android:id="@+id/job1Period"
        android:layout_width="242dp"
        android:layout_height="28dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/job1Period"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/job1Title" />

    <TextView
        android:id="@+id/job1Description"
        android:layout_width="329dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:text="@string/Job1Description"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toBottomOf="@+id/job1Period" />

    <View
        android:id="@+id/divider3"
        android:layout_width="379dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <View
        android:id="@+id/divider4"
        android:layout_width="314dp"
        android:layout_height="2dp"
        android:layout_marginTop="24dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@+id/scrollView2"
        app:layout_constraintStart_toStartOf="@+id/scrollView2"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <!--<Button-->
        <!--android:id="@+id/btnAddJob"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="76dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:onClick="btnAddJob"-->
        <!--android:text="@string/btnNewJob"-->
        <!--app:layout_constraintBottom_toBottomOf="@+id/scrollView2"-->
        <!--app:layout_constraintEnd_toEndOf="@+id/scrollView2"-->
        <!--app:layout_constraintStart_toStartOf="@+id/scrollView2"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/divider4"-->
        <!--app:layout_constraintVertical_bias="0.167" />-->

</android.support.constraint.ConstraintLayout>